--- a/src/problematic_internet_use_llm.ipynb
+++ b/src/problematic_internet_use_llm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "b738c2ef",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,9 @@
     "from sklearn.metrics import cohen_kappa_score\n",
     "import os\n",
     "from pathlib import Path\n",
-    "import sys"
+    "import sys\n",
+    "from dotenv import load_dotenv\n",
+    "from openai import OpenAI"
    ]
   },
   {
@@ -37,19 +39,6 @@
     "# Agregar src/ al path para importar módulos locales\n",
     "if str(SRC_DIR) not in sys.path:\n",
     "    sys.path.append(str(SRC_DIR))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "b46bbca1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Importar módulos personalizados\n",
-    "from features import FeatureProcessor\n",
-    "from modtrain import train_and_evaluate\n",
-    "from utils import save_submission"
    ]
   },
   {
@@ -100,6 +89,147 @@
     "    except Exception as e:\n",
     "        print(f\"Error cargando datos: {str(e)}\")\n",
     "        raise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ddf01c1",
+   "metadata": {},
+   "source": [
+    "LLM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "57b5ad16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()  # Carga las variables desde .env\n",
+    "\n",
+    "api_key = os.getenv(\"DEEPSEEK_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4acffd07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = OpenAI(\n",
+    "    api_key=os.getenv(\"DEEPSEEK_KEY\"),\n",
+    "    base_url=\"https://openrouter.ai/api/v1\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "efc004d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def query_deepseek(prompt: str, model: str = \"deepseek/deepseek-chat-v3-0324:free\") -> str:\n",
+    "    resp = client.chat.completions.create(\n",
+    "        model=model,\n",
+    "        messages=[{\"role\":\"user\", \"content\":prompt}],\n",
+    "        temperature=0.6,\n",
+    "        # Muestra la cantidad de output\n",
+    "        max_tokens=4096,\n",
+    "    )\n",
+    "    return resp.choices[0].message.content.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "76e22533",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Celdas encontradas: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargar el notebook\n",
+    "from langchain_community.document_loaders import NotebookLoader\n",
+    "\n",
+    "loader = NotebookLoader(\"problematic_internet_use_llm.ipynb\", include_outputs=False, remove_newline=True)\n",
+    "docs = loader.load()\n",
+    "print(f\"Celdas encontradas: {len(docs)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a03c557",
+   "metadata": {},
+   "source": [
+    "Prompts que hay que realizar de manera general"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee2d5864",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Código mejorado con cambios de estilo y eficiencia\n",
+      "\n",
+      "```python\n",
+      "# Importación del cargador de notebooks de LangChain\n",
+      "from langchain_community.document_loaders import NotebookLoader\n",
+      "\n",
+      "# Configuración del cargador:\n",
+      "# - Archivo: prueba-llm.ipynb\n",
+      "# - exclude_outputs: no incluir salidas de celdas\n",
+      "# - remove_newline: elimina saltos de línea innecesarios\n",
+      "loader = NotebookLoader(\n",
+      "    \"prueba-llm.ipynb\", \n",
+      "    include_outputs=False, \n",
+      "    remove_newline=True\n",
+      ")\n",
+      "\n",
+      "# Carga los documentos (celdas del notebook)\n",
+      "docs = loader.load()\n",
+      "\n",
+      "# Muestra el número de celdas encontradas\n",
+      "print(f\"Celdas encontradas: {len(docs)}\")\n",
+      "```\n",
+      "\n",
+      "# Cambios realizados:\n",
+      "# 1. Organización más clara del código con saltos de línea lógicos\n",
+      "# 2. Comentarios descriptivos para cada sección\n",
+      "# 3. Formato consistente en la asignación de parámetros\n",
+      "# 4. Se mantuvo exactamente la misma funcionalidad original\n",
+      "# 5. Se agregaron comentarios explicando el propósito de cada parámetro\n"
+     ]
+    }
+   ],
+   "source": [
+    "codigo_original = \"\"\"\n",
+    "# Carga el notebook activo (puedes ver su nombre en Kaggle)\n",
+    "from langchain_community.document_loaders import NotebookLoader\n",
+    "\n",
+    "loader = NotebookLoader(\"prueba-llm.ipynb\", include_outputs=False, remove_newline=True)\n",
+    "docs = loader.load()\n",
+    "print(f\"Celdas encontradas: {len(docs)}\")\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = f\"\"\"Reescribe el siguiente código con mejoras de estilo y eficiencia, sin cambiar su funcionalidad:\\n{codigo_original},\n",
+    "ademas, todo lo que no este relacionado a codigo lo dejes comentado, incluyendo los cambios realizados\"\"\"\n",
+    "\n",
+    "respuesta = query_deepseek(prompt)\n",
+    "print(respuesta)"
    ]
   },
   {
