Fixed some path errors, and verified everything

--- a/src/problematic_internet_use_llm.ipynb
+++ b/src/problematic_internet_use_llm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "b738c2ef",
    "metadata": {},
    "outputs": [],
@@ -25,20 +25,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "id": "de19fc13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Paths robustos\n",
+    "# 1. Definir directorios robustamente desde notebook\n",
     "BASE_DIR = Path().resolve()\n",
-    "SRC_DIR = BASE_DIR / \"src\"\n",
-    "DATA_DIR = SRC_DIR / \"data\"\n",
+    "DATA_DIR = BASE_DIR / \"data\"\n",
     "OUTPUT_DIR = BASE_DIR / \"outputs\"\n",
     "\n",
-    "# Agregar src/ al path para importar módulos locales\n",
+    "# 2. Agregar src al path para poder importar módulos locales\n",
     "if str(SRC_DIR) not in sys.path:\n",
-    "    sys.path.append(str(SRC_DIR))"
+    "    sys.path.append(str(SRC_DIR))\n",
+    "\n",
+    "# 3. Verificar lectura de los archivos\n",
+    "train_path = DATA_DIR / 'train.csv'\n",
+    "test_path = DATA_DIR / 'test.csv'"
    ]
   },
   {
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "id": "5594db62",
    "metadata": {},
    "outputs": [],
@@ -101,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "57b5ad16",
    "metadata": {},
    "outputs": [],
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "4acffd07",
    "metadata": {},
    "outputs": [],
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "efc004d5",
    "metadata": {},
    "outputs": [],
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "76e22533",
    "metadata": {},
    "outputs": [
@@ -175,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "ee2d5864",
    "metadata": {},
    "outputs": [
@@ -183,35 +186,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Código mejorado con cambios de estilo y eficiencia\n",
-      "\n",
       "```python\n",
-      "# Importación del cargador de notebooks de LangChain\n",
+      "# Importa el cargador de notebooks de LangChain\n",
       "from langchain_community.document_loaders import NotebookLoader\n",
       "\n",
       "# Configuración del cargador:\n",
       "# - Archivo: prueba-llm.ipynb\n",
-      "# - exclude_outputs: no incluir salidas de celdas\n",
-      "# - remove_newline: elimina saltos de línea innecesarios\n",
+      "# - exclude_outputs: No incluir salidas de celdas\n",
+      "# - remove_newline: Eliminar saltos de línea\n",
       "loader = NotebookLoader(\n",
-      "    \"prueba-llm.ipynb\", \n",
-      "    include_outputs=False, \n",
+      "    file_path=\"prueba-llm.ipynb\",\n",
+      "    include_outputs=False,\n",
       "    remove_newline=True\n",
       ")\n",
       "\n",
-      "# Carga los documentos (celdas del notebook)\n",
+      "# Carga los documentos y muestra el conteo de celdas\n",
       "docs = loader.load()\n",
-      "\n",
-      "# Muestra el número de celdas encontradas\n",
       "print(f\"Celdas encontradas: {len(docs)}\")\n",
-      "```\n",
       "\n",
-      "# Cambios realizados:\n",
-      "# 1. Organización más clara del código con saltos de línea lógicos\n",
-      "# 2. Comentarios descriptivos para cada sección\n",
-      "# 3. Formato consistente en la asignación de parámetros\n",
-      "# 4. Se mantuvo exactamente la misma funcionalidad original\n",
-      "# 5. Se agregaron comentarios explicando el propósito de cada parámetro\n"
+      "# Mejoras realizadas:\n",
+      "# 1. Formateo consistente del código\n",
+      "# 2. Argumentos nombrados explícitamente\n",
+      "# 3. Comentarios descriptivos\n",
+      "# 4. Mantenimiento de la funcionalidad original\n",
+      "```\n"
      ]
     }
    ],
@@ -233,6 +231,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "b8a36b8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analizar_archivo(filepath: str, pregunta: str):\n",
+    "    with open(filepath, \"r\", encoding=\"utf-8\") as f:\n",
+    "        contenido = f.read()\n",
+    "\n",
+    "    prompt = f\"\"\"Tengo este archivo llamado `{filepath}` con el siguiente contenido:\n",
+    "\n",
+    "[INICIO DEL ARCHIVO]\n",
+    "{contenido}\n",
+    "[FIN DEL ARCHIVO]\n",
+    "\n",
+    "Ahora, por favor responde lo siguiente:\n",
+    "{pregunta}\n",
+    "\"\"\"\n",
+    "    respuesta = query_deepseek(prompt)\n",
+    "    print(respuesta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2612cb40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Basándome en el diccionario de datos proporcionado, aquí tienes recomendaciones de feature engineering organizadas por categorías:\n",
+      "\n",
+      "### 1. **Variables Categóricas (One-Hot Encoding/Label Encoding)**\n",
+      "   - **Estacionalidad**: Las variables `*_Season` (presentes en casi todos los instrumentos) podrían convertirse en variables dummy (one-hot encoding) para capturar efectos estacionales.\n",
+      "   - **Variables con etiquetas**: \n",
+      "     - `Sex` (0/1), `*_Zone` (ej. `FGC_CU_Zone`), `BIA_Activity_Level_num`, `BIA_Frame_num`, `PCIAT_*` (ítems 1-20), y `computerinternet_hoursday` son categóricas ordinales o nominales. Usa:\n",
+      "       - **One-hot encoding** si no hay orden (ej. estaciones).\n",
+      "       - **Label encoding** si hay orden (ej. `BIA_Activity_Level_num`: 1=Very Light a 5=Exceptional).\n",
+      "     - Para `PCIAT_Total`, considera crear categorías basadas en los umbrales de severidad proporcionados (None/Mild/Moderate/Severe).\n",
+      "\n",
+      "### 2. **Normalización/Estandarización**\n",
+      "   - **Variables continuas**: `Age`, `BMI`, `Height`, `Weight`, medidas de BIA (ej. `BIA_BMC`, `BIA_BMR`), y puntuaciones totales (`PAQ_A_Total`, `PAQ_C_Total`, `SDS_Total_Raw`). \n",
+      "     - Usa **StandardScaler** si la distribución es normal.\n",
+      "     - Usa **MinMaxScaler** si los valores tienen rangos fijos (ej. porcentajes).\n",
+      "\n",
+      "### 3. **Creación de Nuevas Features**\n",
+      "   - **Antropometría**:\n",
+      "     - `BMI` ya está incluido, pero podrías crear `BMI_ZScore` (para niños/adolescentes, usando tablas de referencia por edad/sexo).\n",
+      "     - Ratio `Waist-to-Height` (Waist_Circumference/Height) como indicador de salud metabólica.\n",
+      "   - **Fitness**:\n",
+      "     - Combina `Time_Mins` y `Time_Sec` en una sola variable: `Total_Time_Seconds`.\n",
+      "     - Crea un *composite score* de fitness (ej. promedio de zonas saludables: `FGC_*_Zone`).\n",
+      "   - **PCIAT**:\n",
+      "     - Suma de ítems específicos para subescalas (ej. \"adicción\", \"impacto social\").\n",
+      "   - **Sueño**:\n",
+      "     - Clasifica `SDS_Total_T` en categorías basadas en puntuaciones clínicas (si existen).\n",
+      "\n",
+      "### 4. **Manejo de Valores Faltantes**\n",
+      "   - **Instrumentos con muchas features**: BIA y PCIAT tienen múltiples columnas. Considera:\n",
+      "     - **Imputación** por mediana/moda si los faltantes son <10%.\n",
+      "     - **Indicadores de faltante** (ej. `BIA_missing_flag`) si son significativos.\n",
+      "\n",
+      "### 5. **Reducción de Dimensionalidad**\n",
+      "   - **PCA/Análisis factorial**: Para cuestionarios con muchos ítems (ej. PCIAT con 20 ítems) o medidas de BIA (12+ variables correlacionadas).\n",
+      "   - **Agregación**: Promedio de medidas repetidas (ej. `Sit & Reach` izquierdo/derecho).\n",
+      "\n",
+      "### 6. **Interacciones y No Linealidades**\n",
+      "   - **Interacciones**: `Sex × Fitness_Score`, `Age × BMI`.\n",
+      "   - **Binning**: Edad en grupos (niño/adolescente) o BMI en categorías (bajo peso, normal, sobrepeso).\n",
+      "\n",
+      "### 7. **Temporalidad (si aplica)**\n",
+      "   - Si hay múltiples registros por participante, crear features como:\n",
+      "     - **Diferencias** entre temporadas (ej. cambio en `BMI` entre Spring y Fall).\n",
+      "     - **Estabilidad** (ej. número de veces en \"Healthy Fitness Zone\").\n",
+      "\n",
+      "### Ejemplo de Código (Python):\n",
+      "```python\n",
+      "import pandas as pd\n",
+      "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+      "\n",
+      "# Ejemplo para estacionalidad:\n",
+      "df['Season_Spring'] = df['Basic_Demos-Enroll_Season'].apply(lambda x: 1 if x == 'Spring' else 0)\n",
+      "# Ejemplo para PCIAT categories:\n",
+      "df['PCIAT_Severity'] = pd.cut(df['PCIAT-PCIAT_Total'], bins=[0, 30, 49, 79, 100], labels=['None', 'Mild', 'Moderate', 'Severe'])\n",
+      "# Escalado:\n",
+      "scaler = StandardScaler()\n",
+      "df[['Age', 'BMI']] = scaler.fit_transform(df[['Age', 'BMI']])\n",
+      "```\n",
+      "\n",
+      "### Consideraciones Finales:\n",
+      "- **Contexto clínico**: Valida las transformaciones con expertos (ej. categorías de BMI para niños).\n",
+      "- **Evaluación**: Prueba el impacto de cada feature en el modelo (usando técnicas como SHAP).\n",
+      "\n",
+      "¿Hay alguna área específica (ej. antropometría, cuestionarios) en la que quieras profundizar?\n"
+     ]
+    }
+   ],
+   "source": [
+    "analizar_archivo(\"data\\data_dictionary.csv\", \"¿Puedes revisar este archivo y recomendarme su feature engineering?\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1d7b0b84",
    "metadata": {},
@@ -242,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "cdc77a60",
    "metadata": {},
    "outputs": [],
@@ -358,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "f23643ef",
    "metadata": {},
    "outputs": [],
@@ -408,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "1f233bbf",
    "metadata": {},
    "outputs": [],
@@ -433,22 +536,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6a40a74",
-   "metadata": {},
-   "source": [
-    "LLM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e4e536e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "19f6ed58",
    "metadata": {},
    "source": [
@@ -457,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "01c5d683",
    "metadata": {},
    "outputs": [],
@@ -497,18 +584,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e23c75b",
+   "cell_type": "markdown",
+   "id": "7265a910",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Complete the submission"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "id": "58a2ef94",
    "metadata": {},
    "outputs": [],
@@ -538,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "id": "727e2827",
    "metadata": {},
    "outputs": [
@@ -561,7 +646,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\leosa\\AppData\\Local\\Temp\\ipykernel_9280\\4003652640.py:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\leosa\\AppData\\Local\\Temp\\ipykernel_6368\\2534072281.py:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  train['SII_group'], bins = pd.qcut(\n"
      ]
     },
@@ -572,23 +657,20 @@
       "\n",
       "=== Entrenamiento ===\n",
       "\n",
-      "✔ QWK promedio: 0.4310\n",
+      "✔ QWK promedio: 0.4285\n",
       "\n",
       "=== Generando submission ===\n",
-      "Submission saved to C:\\TrabajoFinal\\Child_mind_institute_problematic_internet_use\\outputs\\submission.csv\n",
-      "✔ Submission generado en C:\\TrabajoFinal\\Child_mind_institute_problematic_internet_use\\outputs\\submission.csv\n"
+      "Submission saved to C:\\TrabajoFinal\\Child_mind_institute_problematic_internet_use\\src\\outputs\\submission.csv\n",
+      "✔ Submission generado en C:\\TrabajoFinal\\Child_mind_institute_problematic_internet_use\\src\\outputs\\submission.csv\n"
      ]
     }
    ],
    "source": [
-    "# Directorios de datos y salida\n",
-    "DATA_DIR = SRC_DIR / \"data\"\n",
-    "OUTPUT_DIR = BASE_DIR / \"outputs\"\n",
     "def main():\n",
     "    try:\n",
     "        print(\"\\n=== Cargando datos ===\")\n",
-    "        train = pd.read_csv(DATA_DIR / 'train.csv')\n",
-    "        test = pd.read_csv(DATA_DIR / 'test.csv')\n",
+    "        train = pd.read_csv(train_path)\n",
+    "        test = pd.read_csv(test_path)\n",
     "        \n",
     "        # Verificación de datos críticos\n",
     "        assert 'PCIAT-PCIAT_Total' in train.columns, \"Columna target no encontrada\"\n",
